--- a/palema/src/App.css
+++ b/palema/src/App.css
@@ -23,3 +23,11 @@
   align-items: center;
 }
 
+.options {
+  width: 100%;
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
