--- a/palema/src/App.css
+++ b/palema/src/App.css
@@ -27,6 +27,34 @@
   align-items: center;
 }
 
+.HomePage button,
+.Menu button,
+.Quiz button,
+.ChatBot button,
+.EndQuiz button {
+  width: 250px;
+  height: 50px;
+  margin: 5px;
+  border: none;
+  border-radius: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  color: white;
+  background-color: #00853E;
+}
+
+.quitButton {
+  background-color: #E31C23;
+}
+
+.HomePage,
+.Menu,
+.Quiz,
+.ChatBot,
+.EndQuiz {
+  color: white;
+}
+
 .options {
   width: 100%;
   display:flex;
