--- a/palema/src/App.css
+++ b/palema/src/App.css
@@ -100,7 +100,7 @@
   text-align: center;
 }
 .options button{
-    width: 250px;
+  width: 250px;
   height: 50px;
   margin: 5px;
   border: none;
@@ -109,4 +109,26 @@
   cursor: pointer;
   color: white;
   background-color: #00853E;
+}
+
+input {
+  width: 75%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid #00853E;
+}
+
+.SendButton {
+  width: 25%;
+  height: 40px;
+  /*margin: 5px;*/
+  border: none;
+  /*border-radius: 10px;*/
+  font-size: 15px;
+  cursor: pointer;
+  color: white;
+  background-color: #00853E;
+  
 }
